Fix spacing nits

--- a/src/ui/variables.css
+++ b/src/ui/variables.css
@@ -32,7 +32,7 @@
 
 :root {
   --window-width: 352px;
-  --window-max-height: 404px;
+  --window-max-height: 399px;
 
   --font-family: "Inter Regular";
   --font-family-semi-bold: "Inter Semi Bold";
